src/objects/Vendor_Invoice_Line__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Financial_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>Financial_Account__r.Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_Remaining_To_Pay__c</fullName>
        <defaultValue>0</defaultValue>
        <description>this will display amount remaining to be paid by the user</description>
        <label>Amount Remaining To Distribute</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Financial Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Financial_Account__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Financial_Account__c</referenceTo>
        <relationshipLabel>Vendor Invoice Lines (Financial Account)</relationshipLabel>
        <relationshipName>Vendor_Invoice_Lines</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Financial_Journal_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Journal Line</label>
        <referenceTo>Financial_Journal_Line__c</referenceTo>
        <relationshipLabel>Vendor Invoice Lines</relationshipLabel>
        <relationshipName>Vendor_Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Insert_Index__c</fullName>
        <label>Insert Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Account_Name__c</fullName>
        <formula>Payment_Financial_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Account_Number__c</fullName>
        <formula>Payment_Financial_Account__r.Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Financial_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Financial Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Financial_Account__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Financial_Account__c</referenceTo>
        <relationshipLabel>Vendor Invoice Lines (Payment Financial Account)</relationshipLabel>
        <relationshipName>Vendor_Invoice_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Check</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Post_Date__c</fullName>
        <label>Post Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Posted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Posted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Tax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor_Invoice_Check__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Invoice Check</label>
        <referenceTo>Vendor_Invoice_Check__c</referenceTo>
        <relationshipLabel>Vendor Invoice Lines</relationshipLabel>
        <relationshipName>Vendor_Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Invoice__c</fullName>
        <label>Vendor Invoice</label>
        <referenceTo>Vendor_Invoice__c</referenceTo>
        <relationshipLabel>Vendor Invoice Lines</relationshipLabel>
        <relationshipName>Vendor_Invoice_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Vendor Invoice Line</label>
    <nameField>
        <displayFormat>VNDRSTMTLNE-{0000000}</displayFormat>
        <label>Vendor Invoice Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Invoice Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>PaymentFinancialAccountValida</fullName>
        <active>true</active>
        <description>Payment financial account is required for Invoice Lines paid by Credit Card or ACH.</description>
        <errorConditionFormula>IF((TEXT(Payment_Type__c) = &apos;Credit Card&apos; ||   TEXT(Payment_Type__c) = &apos;ACH&apos; )  &amp;&amp;   ISBLANK(Payment_Financial_Account__c ) 
,true
,false)</errorConditionFormula>
        <errorDisplayField>Payment_Financial_Account__c</errorDisplayField>
        <errorMessage>Payment financial account is required for Invoice Lines paid by Credit Card or ACH.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>paymentAccountOnlyForCC_or_ACH</fullName>
        <active>true</active>
        <description>Payment financial account required only for Invoice Lines paid by Credit Card or ACH.</description>
        <errorConditionFormula>IF(TEXT(Payment_Type__c) = &apos;Check&apos;  &amp;&amp;   !ISBLANK(Payment_Financial_Account__c ) 
,true
,false)</errorConditionFormula>
        <errorDisplayField>Payment_Financial_Account__c</errorDisplayField>
        <errorMessage>Payment financial account is required only for Invoice Lines paid by Credit Card or ACH.</errorMessage>
    </validationRules>
</CustomObject>